--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 404 - Page not found
+title: "⚠️ Error 404: Page not found ⚠️"
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Ah, shit. You really biffed this one, huh? Head [back to the homepage]({{ site.baseurl }}/) and try again.
