added taglines, fixed safari hero img, logo sizing
added taglines- now up to 100
wrap text on taglines to prevent long words breaking site on mobile
404 edit
fixed hero image sizing on safari
edited logo sizing (smaller)

--- a/404.md
+++ b/404.md
@@ -4,4 +4,4 @@ title: "⚠️ Error 404: Page not found ⚠️"
 permalink: /404.html
 ---
 
-Ah, shit. You really biffed this one, huh? Head [back to the homepage]({{ site.baseurl }}/) and try again.
+Ah, shit. I really biffed this one, huh? Head [back to the homepage]({{ site.baseurl }}/) and try again.
